--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     <input type="password" name="password_nurse" placeholder="Password">
                                     <a href="./nurse/"><button type="submit" name="login_nurse">Login</button></a>
                                 </form>
-                                <a href="#">forgot password?</a>
+                                <a href="./nurse/">forgot password?</a>
                             </div>
                             <div class="form-control">
                                 <h3>Doctor Sign in</h3>
